[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["network-programming"]
description = "A threaded DNS server with no `unsafe`"
edition = "2021"
keywords = ["dns", "server", "safe"]
license = "Apache-2.0"
#name = "dns-server"
name = "rust-dns"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/ops"
version = "0.1.0"

[dependencies]
fixed-buffer = "^0.3.1"
