[package]
publish = false
description = "Integration test for `build-data` crate"
edition = "2018"
license = "Apache-2.0"
name = "build-data-test"
version = "0.1.0"

[dependencies]

[dev-dependencies]
safe-regex = "^0.2.3"

[build-dependencies]
build-data = { version = "0", path = "../build-data" }
