[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["development-tools::build-utils"]
description = "Companion to `build-data` crate"
edition = "2018"
keywords = ["build", "info", "data", "commit", "branch"]
license = "Apache-2.0"
name = "build-data-writer"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/ops"
version = "0.1.1"

[dependencies]
chrono = { version = "^0.4.19", features = ["alloc"] }

[dev-dependencies]
assert_cmd = "1"
build-data = { version = "0", path = "../build-data" }
safe-lock = "^0.1.3"
safe-regex = "^0.2.3"
spectral = "^0.6.0"
temp-dir = "^0.1.10"
temp-file = "^0.1.5"
