[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["development-tools::build-utils"]
description = "Include build data in your program: date, rustc version, git commit & branch, etc."
edition = "2021"
keywords = ["build", "info", "data", "commit", "branch"]
license = "Apache-2.0"
name = "build-data"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/ops"
version = "0.1.4"

[dependencies]
chrono = { version = "^0.4.19", features = ["alloc"] }
safe-lock = "^0.1.3"
safe-regex = "^0.2.3"

[dev-dependencies]
assert_cmd = "1"
rusty-fork = "^0.3.0"
spectral = "^0.6.0"
