[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["network-programming"]
description = "A threaded DNS server with no `unsafe`"
edition = "2018"
keywords = ["dns", "server", "safe"]
license = "Apache-2.0"
name = "safe-dns"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/ops"
version = "0.1.0"

[dependencies]
fixed-buffer = "^0.3.1"
multimap = "^0.8.3"
permit = "^0.1.4"

[dev-dependencies]
