[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["concurrency"]
description = "A lock struct with a `const fn` constructor and no `unsafe`"
edition = "2018"
keywords = ["lock", "safe"]
license = "Apache-2.0"
name = "safe-lock"
readme = "Readme.md"
repository = "https://gitlab.com/leonhard-llc/ops"
version = "0.1.2"

[dependencies]

[dev-dependencies]
